--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -1,11 +1,11 @@
 <div class="boards-wrapper">
-  <h2>Boards</h2>
-  <div id="boards">
-    <a class="board" *ngFor="let board of boards?.result" [routerLink]="['/b', board._id]">
-      <span class="title">{{board?.title}}</span>
-    </a>
-    <a class="board add-board" (click)="addBoard()">
-      <span class="title">Create a new board</span>
-    </a>
-  </div>
+<h2>Boards</h2>
+<div id="boards">
+  <a class="board" *ngFor="let board of boards" [routerLink]="['/b', board._id]">
+    <span class="title">{{board?.title}}</span>
+  </a>
+  <a href="#" class="board add-board" (click)="addBoard()">
+    <span class="title">Create a new board...</span>
+  </a>
+</div>
 </div>
